Added chat storage, server tls, errors, validation
