# pkg/chat_v1/chat.pb.validate.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: server.proto
+// source: chat.proto
 
 package chat_v1
 
@@ -34,6 +34,9 @@ var (
 	_ = anypb.Any{}
 	_ = sort.Sort
 )
+
+// define the regex for a UUID once up-front
+var _chat_uuidPattern = regexp.MustCompile("^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$")
 
 // Validate checks the field values on CreateChatRequest with the rules defined
 // in the proto definition for this message. If any rules are violated, the
@@ -201,10 +204,28 @@ func (m *CreateChatResponse) validate(all bool) error {
 
 	var errors []error
 
-	// no validation rules for ChatId
+	if err := m._validateUuid(m.GetChatId()); err != nil {
+		err = CreateChatResponseValidationError{
+			field:  "ChatId",
+			reason: "value must be a valid UUID",
+			cause:  err,
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
 
 	if len(errors) > 0 {
 		return CreateChatResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+func (m *CreateChatResponse) _validateUuid(uuid string) error {
+	if matched := _chat_uuidPattern.MatchString(uuid); !matched {
+		return errors.New("invalid uuid format")
 	}
 
 	return nil
@@ -305,10 +326,39 @@ func (m *ConnectChatRequest) validate(all bool) error {
 
 	var errors []error
 
-	// no validation rules for ChatId
+	if err := m._validateUuid(m.GetChatId()); err != nil {
+		err = ConnectChatRequestValidationError{
+			field:  "ChatId",
+			reason: "value must be a valid UUID",
+			cause:  err,
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if l := utf8.RuneCountInString(m.GetUsername()); l < 5 || l > 50 {
+		err := ConnectChatRequestValidationError{
+			field:  "Username",
+			reason: "value length must be between 5 and 50 runes, inclusive",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
 
 	if len(errors) > 0 {
 		return ConnectChatRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+func (m *ConnectChatRequest) _validateUuid(uuid string) error {
+	if matched := _chat_uuidPattern.MatchString(uuid); !matched {
+		return errors.New("invalid uuid format")
 	}
 
 	return nil
@@ -408,39 +458,48 @@ func (m *Message) validate(all bool) error {
 
 	var errors []error
 
-	// no validation rules for Text
-
-	// no validation rules for From
-
-	// no validation rules for To
-
-	if all {
-		switch v := interface{}(m.GetSentAt()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, MessageValidationError{
-					field:  "SentAt",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, MessageValidationError{
-					field:  "SentAt",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
+	if l := utf8.RuneCountInString(m.GetText()); l < 1 || l > 500 {
+		err := MessageValidationError{
+			field:  "Text",
+			reason: "value length must be between 1 and 500 runes, inclusive",
 		}
-	} else if v, ok := interface{}(m.GetSentAt()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return MessageValidationError{
-				field:  "SentAt",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
+		if !all {
+			return err
 		}
+		errors = append(errors, err)
+	}
+
+	if l := utf8.RuneCountInString(m.GetFrom()); l < 5 || l > 50 {
+		err := MessageValidationError{
+			field:  "From",
+			reason: "value length must be between 5 and 50 runes, inclusive",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if l := utf8.RuneCountInString(m.GetTo()); l < 5 || l > 50 {
+		err := MessageValidationError{
+			field:  "To",
+			reason: "value length must be between 5 and 50 runes, inclusive",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if m.GetSentAt() == nil {
+		err := MessageValidationError{
+			field:  "SentAt",
+			reason: "value is required",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
 	}
 
 	if len(errors) > 0 {
@@ -673,6 +732,18 @@ func (m *SendMessageRequest) validate(all bool) error {
 
 	var errors []error
 
+	if err := m._validateUuid(m.GetChatId()); err != nil {
+		err = SendMessageRequestValidationError{
+			field:  "ChatId",
+			reason: "value must be a valid UUID",
+			cause:  err,
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
 	if all {
 		switch v := interface{}(m.GetMessage()).(type) {
 		case interface{ ValidateAll() error }:
@@ -704,6 +775,14 @@ func (m *SendMessageRequest) validate(all bool) error {
 
 	if len(errors) > 0 {
 		return SendMessageRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+func (m *SendMessageRequest) _validateUuid(uuid string) error {
+	if matched := _chat_uuidPattern.MatchString(uuid); !matched {
+		return errors.New("invalid uuid format")
 	}
 
 	return nil
